Refactor poms, break version, and add web project
Former-commit-id: 6fa3c8e010baec00d6c4cb7d7ae1fd2a891bbf9b

--- a/Application/pom.xml
+++ b/Application/pom.xml
@@ -2,9 +2,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
     <artifactId>bgs-application</artifactId>
-    <version>1.0</version>
     <parent>
         <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
         <artifactId>bgl-parent</artifactId>
@@ -82,12 +80,12 @@
         <dependency>
             <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
             <artifactId>bgs-server</artifactId>
-            <version>1.0</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>bgs-client</artifactId>
-            <version>1.0</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
