--- a/BGS/pom.xml
+++ b/BGS/pom.xml
@@ -2,9 +2,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
     <artifactId>bgs</artifactId>
-    <version>1.0</version>
     <parent>
         <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
         <artifactId>bgl-parent</artifactId>
@@ -51,14 +49,14 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>bgl</artifactId>
-            <version>1.1</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>state</artifactId>
-            <version>1.0</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
