--- a/bgl/pom.xml
+++ b/bgl/pom.xml
@@ -7,9 +7,7 @@
         <artifactId>bgl-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
     <artifactId>bgl</artifactId>
-    <version>1.1</version>
     <packaging>jar</packaging>
 
     <build>
@@ -25,6 +23,8 @@
                 </excludes>
             </resource>
         </resources>
+
+
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -44,16 +44,13 @@
                         org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher
                     </mainClass>
                     <arguments>
-                        <argument>
-                            /${project.basedir}/src/hu/bme/aut/gergelyszaz/GenerateBGL.mwe2
-                        </argument>
+                        <argument>/${project.basedir}/src/hu/bme/aut/gergelyszaz/GenerateBGL.mwe2</argument>
                         <argument>-p</argument>
                         <argument>rootPath=/${project.basedir}/..</argument>
                     </arguments>
                     <classpathScope>compile</classpathScope>
                     <includePluginDependencies>true</includePluginDependencies>
-                    <cleanupDaemonThreads>false
-                    </cleanupDaemonThreads><!-- see https://bugs.eclipse.org/bugs/show_bug.cgi?id=475098#c3 -->
+                    <cleanupDaemonThreads>false</cleanupDaemonThreads><!-- see https://bugs.eclipse.org/bugs/show_bug.cgi?id=475098#c3 -->
                 </configuration>
             </plugin>
             <plugin>
@@ -67,9 +64,19 @@
                 <configuration>
                     <filesets combine.children="append">
                         <fileset>
-                            <directory>
-                                ${basedir}/../hu.bme.aut.gergelyszaz.BGL/src-gen/
-                            </directory>
+                            <directory>${basedir}/../src-gen/</directory>
+                            <includes>
+                                <include>**/*</include>
+                            </includes>
+                        </fileset>
+                        <fileset>
+                            <directory>${basedir}/../bgl.ide/src-gen</directory>
+                            <includes>
+                                <include>**/*</include>
+                            </includes>
+                        </fileset>
+                        <fileset>
+                            <directory>${basedir}/../bgl.web/src-gen/</directory>
                             <includes>
                                 <include>**/*</include>
                             </includes>
