--- a/bgs.server/src/config/games.properties
+++ b/bgs.server/src/config/games.properties
@@ -1,3 +1,3 @@
-mills=/resources/mills.bgl
-tictactoe=/resources/tic-tac-toe.bgl
-uno=/resources/uno.bgl
+Mills=/resources/mills.bgl
+TicTacToe=/resources/tic-tac-toe.bgl
+Uno=/resources/uno.bgl
