--- a/bgl/pom.xml
+++ b/bgl/pom.xml
@@ -2,13 +2,16 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>hu.gergelyszaz.bgs</groupId>
-        <artifactId>parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
+
+    <groupId>hu.gergelyszaz.bgs</groupId>
     <artifactId>bgl</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
+    <properties>
+        <xtextVersion>2.9.2</xtextVersion>
+        <xtendVersion>2.9.0</xtendVersion>
+    </properties>
 
     <build>
         <sourceDirectory>src</sourceDirectory>
@@ -56,6 +59,20 @@
             <plugin>
                 <groupId>org.eclipse.xtend</groupId>
                 <artifactId>xtend-maven-plugin</artifactId>
+                <version>${xtendVersion}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <outputDirectory>${basedir}/xtend-gen</outputDirectory>
+                    <testOutputDirectory>${basedir}/xtend-gen
+                    </testOutputDirectory>
+                </configuration>
             </plugin>
 
             <plugin>
