--- a/bgs.application/pom.xml
+++ b/bgs.application/pom.xml
@@ -2,12 +2,13 @@
 	xmlns="http://maven.apache.org/POM/4.0.0"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>hu.gergelyszaz.bgs</groupId>
 	<artifactId>bgs.application</artifactId>
-	<parent>
-		<groupId>hu.gergelyszaz.bgs</groupId>
-		<artifactId>parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-	</parent>
+	<version>1.0.0</version>
+	<properties>
+		<xtendVersion>2.9.0</xtendVersion>
+	</properties>
+
 	<build>
 		<resources>
 			<resource>
@@ -16,11 +17,30 @@
 		</resources>
 		<plugins>
 			<plugin>
-				<groupId>com.zenjava</groupId>
-				<artifactId>javafx-maven-plugin</artifactId>
-				<version>8.8.3</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
 				<configuration>
-					<mainClass>Main</mainClass>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>
+						graphics.LoadWindow
+					</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -32,14 +52,14 @@
 			<version>${xtendVersion}</version>
 		</dependency>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+			<groupId>hu.gergelyszaz.bgs</groupId>
 			<artifactId>bgs.server</artifactId>
-			<version>${project.version}</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+			<groupId>hu.gergelyszaz.bgs</groupId>
 			<artifactId>bgs.client</artifactId>
-			<version>${project.version}</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
