--- a/bgs.server/pom.xml
+++ b/bgs.server/pom.xml
@@ -2,13 +2,13 @@
 	xmlns="http://maven.apache.org/POM/4.0.0"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>hu.gergelyszaz.bgs</groupId>
 	<artifactId>bgs.server</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+
 	<packaging>jar</packaging>
-	<parent>
-		<groupId>hu.gergelyszaz.bgs</groupId>
-		<artifactId>parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-	</parent>
+
 	<dependencies>
 		<dependency>
 			<groupId>javax.websocket</groupId>
@@ -40,10 +40,11 @@
 			<artifactId>gson</artifactId>
 			<version>1.7.1</version>
 		</dependency>
+
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+			<groupId>hu.gergelyszaz.bgs</groupId>
 			<artifactId>bgs</artifactId>
-			<version>${project.version}</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -53,6 +54,16 @@
 			</resource>
 		</resources>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
