--- a/state/pom.xml
+++ b/state/pom.xml
@@ -2,11 +2,22 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <groupId>hu.gergelyszaz.bgs</groupId>
     <artifactId>state</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+
     <packaging>jar</packaging>
-    <parent>
-        <groupId>hu.gergelyszaz.bgs</groupId>
-        <artifactId>parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
