--- a/bgs.server/pom.xml
+++ b/bgs.server/pom.xml
@@ -6,9 +6,12 @@
 	<groupId>hu.gergelyszaz.bgs</groupId>
 	<artifactId>bgs.server</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	
+
 	<properties>
 		<junitVersion>4.10</junitVersion>
+		<mainClass>hu.gergelyszaz.bgs.server.WebSocketServer</mainClass>
+		<javaVersion>1.8</javaVersion>
+		<appName>board-game-simulator</appName>
 	</properties>
 
 	<packaging>jar</packaging>
@@ -50,11 +53,11 @@
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junitVersion}</version>
-            <scope>test</scope>
-        </dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junitVersion}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
@@ -64,12 +67,25 @@
 		</resources>
 		<plugins>
 			<plugin>
+				<groupId>com.heroku.sdk</groupId>
+				<artifactId>heroku-maven-plugin</artifactId>
+				<version>2.0.3</version>
+				<configuration>
+					<appName>${appName}</appName>
+					<processTypes>
+						<web>java $JAVA_OPTS -cp target/classes:target/dependency/*
+							${mainClass}</web>
+					</processTypes>
+				</configuration>
+			</plugin>
+
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${javaVersion}</source>
+					<target>${javaVersion}</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
@@ -86,7 +102,7 @@
 				</executions>
 				<configuration>
 					<mainClass>
-						hu.gergelyszaz.bgs.server.WebSocketServer
+						${mainClass}
 					</mainClass>
 				</configuration>
 			</plugin>
