Fix server project path in heroku deploy script #11

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: java
 deploy:
   provider: script
-  script: mvn heroku:deploy -f bgs.server #HEROKU_API_KEY
+  script: mvn heroku:deploy -f board-game-server #HEROKU_API_KEY
